# clinton

./: .pre-commit-config.yaml  README.md  pyproject.toml
clinton/: __main__.py  process.py
clinton/maps/: document_date.txt  payment_amount.txt  payment_date.txt  vendor.txt
clinton/models/: map_file.py  result.py
clinton/parsers/: date_parser.py  money_parser.py
